# receipt-analyzer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/application/: dto.py
app/domain/: entities.py  enums.py  interfaces.py  value_objects.py
app/infrastructure/analysis/: receipt_analyzer.py  reference_store.py  scorer.py
app/infrastructure/celery/: app.py  tasks.py
app/infrastructure/pdf/: bank_profiles.py  byte_analyzer.py  metadata_extractor.py  object_extractor.py  structure_analyzer.py  text_extractor.py
app/infrastructure/storage/: json_report_repository.py
app/presentation/: routes.py
tests/: test_api.py  test_bank_profiles.py  test_byte_analyzer.py  test_receipt_analyzer.py  test_scorer.py  test_structure_analyzer.py
